--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ return true;
 </head>
 <body>
 
-<h2>Online Fruits, Veggies and flowers and Cake and Bakery Products for you</h2>
+<h2>Online Fruits, Veggies and flowers and Cake and Bakery Products for you and family</h2>
 
 <form name="myform" action ="./AddToCart.html" onsubmit="return validateform()">
   <div class="imgcontainer">
