with ec2 instance

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Online Fruits, Veggies and flowers and Cake and Bakery Products for you</title>
+<title>Online Fruits, Veggies and flowers (with ec2 instance)</title>
 <style>
 body {font-family: Arial, Helvetica, sans-serif;}
 form {border: 3px solid #f1f1f1;}
@@ -89,7 +89,7 @@ return true;
 </head>
 <body>
 
-<h2>Online Fruits, Veggies and flowers and Cake and Bakery Products</h2>
+<h2>Online Fruits, Veggies and flowers  (with ec2 instance)</h2>
 
 <form name="myform" action ="./AddToCart.html" onsubmit="return validateform()">
   <div class="imgcontainer">
